Bug 135470 - LibreOffice 7.0.0.3: Error in For...Next Statement
Summary: LibreOffice 7.0.0.3: Error in For...Next Statement
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.1.0 target:7.0.1
Keywords: bibisected, bisected, regression
: 136367 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-08-05 16:37 UTC by Vladimir Sokolinskiy
Modified: 2020-09-03 12:14 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vladimir Sokolinskiy 2020-08-05 16:37:54 UTC
Description:
Sub list_iteration
    Dim item
    For Each item in Array(0)
    Next
End Sub

Runtime Error: "Inadmissible value or data type. Data type mismatch."

Steps to Reproduce:
Run the Macro above

Actual Results:
Runtime error

Expected Results:
No error


Reproducible: Always


User Profile Reset: No



Additional Info:
There was no bug in versions prior to 7.x
Comment 1 Roman Kuznetsov 2020-08-05 19:37:39 UTC
it's a regression as was wrote here

https://forumooo.ru/index.php/topic,7953.30/msg,55434.html
Comment 2 Xisco Faulí 2020-08-06 09:42:20 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=5760c94b8847164f9a7a181f031c7c86643944af

author	Mike Kaganski <mike.kaganski@collabora.com>	2020-07-10 19:06:10 +0300
committer	Mike Kaganski <mike.kaganski@collabora.com>	2020-07-10 20:05:25 +0200
commit 5760c94b8847164f9a7a181f031c7c86643944af (patch)
tree eec33567fa521f17a8431508791b2375063ccefe
parent 2490559b6cddb0815808055dc7f32c733a48c44b (diff)
tdf#134576: proper handling of For/For Each with On Error Resume Next

Bisected with: bibisect-linux64-7.1

Adding Cc: to Mike Kaganski
Comment 3 Mike Kaganski 2020-08-06 15:52:36 UTC
https://gerrit.libreoffice.org/c/core/+/100258
Comment 4 Commit Notification 2020-08-07 07:44:51 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e67ffd5a62c8c27697da594a0fea2362317f221f

tdf#135470: Fix checks

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2020-08-10 09:28:02 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 6ad2f463784a24c566477cdd60ae729651bb8564
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Mike Kaganski, thanks for fixing this issue!!
Comment 6 Commit Notification 2020-08-10 09:28:39 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/82ab191a074141aafa7567fc3c3cad9bc7ea0b24

tdf#135470: Fix checks

It will be available in 7.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Mike Kaganski 2020-09-01 13:25:18 UTC
*** Bug 136367 has been marked as a duplicate of this bug. ***
Comment 8 Roland Baudin 2020-09-03 12:14:12 UTC
I can confirm that the bug is fixed in LO 7.0.1.2 (tested on Linux Ubuntu 20.4.1).
Thanks!